# scout-claims

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: 1-Building-Blocks.ipynb  2-Excercises.ipynb  2-Exercises.ipynb  3-Fine-Tuning.ipynb
notebooks/2025-07/: 1-Building-Blocks.ipynb
notebooks/2025-08/: 2025_08_11_FW_Building_Blocks.ipynb
scripts/: setup_ssl.py
src/: app.py
src/configs/: config.yaml  config_models.py  load_config.py  prompt_library.yaml
src/modules/: claim_processing.py  image_analysis.py  incident_processing.py  transcription.py
